    * graphics/ndwindow.py:
      (MouseMenu): New class for implementing a right-click menu.
      (WxNDWindowFrame.__init__): Take proxy ID as an argument.
      (WxNDWindowFrame.on_event_close): New method for updating proxy data prior
        to closing the window.
      (WxNDWindowFrame.right_click): New method to pop up the right-click menu.
      (WxNDWindowFrame.on_char): Call `on_event_close` when closing the window.
      (NDWindowData): New class for holding returnable client data.
      (NDWindowDataProxy): New data proxy used by client (calling) code.
      (NDWindowFunctor.__init__): Take proxy ID argument.
      (NDWindowFunctor.__call__): Pass proxy ID to window constructor.
      (ndwindow): Return a proxy object to allow client code to access updated
        values of `classes` array.
    * graphics/hypercube.py: Code cleanup.
      
2012-06-20	tboggs <tboggs@users.sourceforge.net>

    Initial ND window capability.  Automatically initialize display thread when
    `hypercube` is called, if needed.  Removed global import of OpenGL namespace
    from hypercube.py.
    
    * graphics/__init__.py: Import `hypercube` and `ndwindow` functions.
    * graphics/hypercube.py: Eliminated global import of OpenGL namespace.
      (hypercube): Automatically call `init_graphics`, if needed.
    * graphics/ndwindow.py: New file for ND window display.
    * graphics/spywxpython.py: Init module-level `viewer` to None.
    
2012-06-17	tboggs <tboggs@users.sourceforge.net>

    Fixed broken deprecation warnings that cause infinite recursion
    
    * spectral.py: Fixed deprection warnings for `tileImage`,
      `saveTrainingSets`, and `loadTrainingSets`.

2012-06-17	tboggs <tboggs@users.sourceforge.net>

    * graphics/hypercube.py: Added mouse control for hypercube display.

2012-06-14	tboggs <tboggs@users.sourceforge.net>

    Fixed mismatch in parameter names in kmeans_ndarray.
    